--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,25 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  username: rails_app_user
+  password: password
+  database: kizuna_ai_db
+  host: localhost
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  host: kizuna-ai-db.cljodaycfhmg.ap-northeast-1.rds.amazonaws.com
+  password: <%= ENV['RDS_KEY'] %>
