--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,8 @@ default: &default
   database: kizuna_ai_db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  charset: utf8mb4
+  encoding: utf8mb4
 
 development:
   <<: *default
